--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -83,6 +83,27 @@
 }
 
 
+@media screen and (max-width: 800px) {
+  body{
+    width:100%;
+    height:100%;
+  }
+  .logo{
+    top:25%;
+    right:50%;
+    width:25%;
+    height:25%;
+  }
+  .centered{
+    position: relative;
+    top: 25%;
+    right:50%;
+    left:25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+}
 
 
 
