--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,6 +1,12 @@
 *{
     color:white;
 }
+
+.material-icons{
+    margin: 10px 20px;
+    padding: 10px 20px;
+    color: purple;
+}
 .overlay {
     height: 100%;
     width: 0;
@@ -8,8 +14,9 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    color:purple;
+    background-color: purple;
+    background-color: rgba(0,0,0, 0.8);
     overflow-x: hidden;
     transition: 0.5s;
 }
