--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,11 +1,28 @@
+*{
+  text-decoration: none;
+}
+
 .centered{
   margin-top:8%;
   margin-bottom: 4%;
 }
 .logo{
-    display: inline-block;
-    margin:0px;
+    width:50%;
+    height:60%;
+    display: block;
     padding: 0px;
+    font-style: unset;
+    margin:13% 27% 4%;
+    clear: both;
+}
+
+.topleft{
+  float:left;
+  width: 4%;
+  top: 0px;
+  left: 0px;
+  right: 100%;
+  margin-left: 2%;
 }
 
 .medium{
@@ -40,8 +57,47 @@
     text-shadow: 0 0 100px violet,0px 0px 25px violet;
 }
 
+.soon{
+  text-align: center;
+  font-size:2.5vw;
+  padding: 2% 10% 0% 10%;
+  margin:0px;
+  animation: glitchy 4s alternate 1s infinite;
+}
+@keyframes glitchy {
+ 25%
+ {
+  text-shadow: 0 0 5px lightblue,0px 0px 5px lightblue;
+ }
+ 50%
+ {
+  text-shadow: 0 0 5px lightblue,0px 0px 25px lightblue;
+ }
+ 75%
+ {
+  text-shadow: 0 0 5px lightblue,0px 0px 5px lightblue;
+ }
+ 100%
+ {
+  text-shadow: 0 0 5px lightblue,0px 0px 25px lightblue;
+ }
+}
 
+.bottom{
+  float:left;
+  margin: 0% 1%;
+  position: absolute;
+  top: 95%;
+  left: 60.5%;
+  transform: translate(-50%, -50%);
+}
 
+.footer{
+  width:40%;
+  margin:0px 40% 0% 30%;
+  position: relative;
+  text-align: center;
+}
 
 
 
@@ -91,197 +147,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-html {
-    background-color: #fff;
-    height: 100%;
-  }
-  body {
-    position: relative;
-    font-family: 'Noticia Text';
-    text-align: center;
-    background: linear-gradient(180deg,#281130 0,#0f0021);
-    height: 100%;
-    margin: 8px;
-    min-height: 500px;
-  }
-  body:before,
-  body:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  body:before {
-    background-color: #00ffff;
-    z-index: -1;
-    animation: glitchy 4s ease 0.3s infinite;
-  }
-  body:after {
-    background-color: #ff00ff;
-    z-index: -2;
-    animation: glitchy 4s ease infinite reverse;
-  }
-  .link-inner {
-    display: block;
-    height: 100%;
-    background-color: #fff;
-    padding: 15px 25px;
-  }
-  .text-link {
-    position: relative;
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    z-index: 1;
-  }
-  .text-link:before,
-  .text-link:after {
-    content: attr(data-content);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  .text-link:before {
-    color: #00ffff;
-    z-index: -1;
-  }
-  .text-link:after {
-    color: #ff00ff;
-    z-index: -2;
-  }
-  .text-link:before {
-    animation: glitchy 2s ease 0.3s infinite;
-  }
-  .text-link:after {
-    animation: glitchy 2s ease infinite reverse;
-  }
-  .line-link {
-    position: relative;
-    display: inline-block;
-    font-size: 24px;
-    text-decoration: none;
-    letter-spacing: 0.10em;
-    color: #fff;
-    font-weight: lighter;
-    z-index: 1;
-    border-bottom: 1px solid rgba(255,255,255,0.75);
-    padding-bottom: 10px;
-  }
-  .line-link:before,
-  .line-link:after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    right: 0;
-    height: 1px;
-    visibility: hidden;
-  }
-  .line-link:before {
-    background-color: #00ffff;
-    z-index: -1;
-  }
-  .line-link:after {
-    background-color: #ff00ff;
-    z-index: -2;
-  }
-  .line-link:hover:before {
-    visibility: visible;
-    animation: line-glitchy 0.3s ease 0.3s infinite;
-  }
-  .line-link:hover:after {
-    visibility: visible;
-    animation: line-glitchy 0.3s ease infinite reverse;
-  }
-  @keyframes glitchy {
-    0% {
-      transform: translate(-2px,2px);
-    }
-    67% {
-      transform: translate(-2px,-2px);
-    }
-    70% {
-      transform: translate(2px,2px);
-    }
-    73% {
-      transform: translate(2px,-2px);
-    }
-    76% {
-      transform: translate(-2px,2px);
-    }
-    79% {
-      transform: translate(2px,-2px);
-    }
-    82% {
-      transform: translate(-2px,2px);
-    }
-    85% {
-      transform: translate(2px,-2px);
-    }
-    88% {
-      transform: translate(-2px,2px);
-    }
-    91% {
-      transform: translate(2px,-2px);
-    }
-    94% {
-      transform: translate(-2px,2px);
-    }
-    97% {
-      transform: translate(2px,-2px);
-    }
-    100% {
-      transform: translate(-2px,2px);
-    }
-  }
-  @keyframes line-glitchy {
-    0% {
-      transform: translate(-1px,1px);
-    }
-   /* 25% {
-      transform: translate(-1px,-1px);
-    }
-    50% {
-      transform: translate(1px,1px);
-    }*/
-    75% {
-      transform: translate(1px,-1px);
-    }
-    100% {
-      transform: translate(-1px,1px);
-    }
-  }
-  
 
 
 
@@ -452,6 +317,7 @@ html {
   }
   #title span {
     background: -webkit-linear-gradient(white, #38495a);
+    background-clip: unset;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
